@@ -9,7 +9,8 @@ importFrom(foreign, read.dbf, read.mtp, read.systat, read.epiinfo, read.arff, re
 importFrom(foreign, write.dbf, write.arff)
 importFrom(utils, read.table, read.csv, read.fwf, read.DIF, read.fortran)
 importFrom(utils, write.table, write.csv)
+importFrom(readODS, read.ods, getNrOfSheetsInODS)
+importFrom(XML, xmlParse, xmlToDataFrame)
 importFrom(jsonlite, fromJSON, toJSON)
 importFrom(openxlsx, read.xlsx, write.xlsx)
 importFrom(curl, curl_download)
-importFrom(readODS, read.ods, getNrOfSheetsInODS)
